# ssi

./: Cargo.toml  README.md  byte_signed_ix.rs  error.rs  lib.rs  signed_message.rs  utils.rs
src/: byte_signed_ix.rs  error.rs  lib.rs  signed_message.rs  utils.rs
src/proxy_auth/: entrypoint.rs  mod.rs  processor.rs  test.rs
src/proxy_auth/instructions/: invoke_authenticated_cpi.rs  mod.rs  register_auth_user.rs
src/proxy_auth/state/: auth_user.rs  mod.rs
