[package]
name = "ssi"
version = "0.1.0"
edition = "2021"
description = "SSI is a specification for gasless solana instructions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.solana-program]
version = "1.16"
[dependencies.borsh]
version = "0.10"
[dependencies.sha3]
version = "0.10"
[dependencies.libsecp256k1]
version = "0.7.0"
[dependencies.thiserror]
version = "1"
[dev-dependencies.rand]
version = "0.8"
[dev-dependencies.rand_core]
version = "0.6"
[dev-dependencies.hex]
version = "0.4"

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"

[profile.release.build-override.solana-program]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"

[profile.release.build-override.sha3]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
[profile.release.build-override.libsecp256k1]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"

[profile.release.build-override.borsh]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"

[profile.release.build-override.thiserror]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"